# Proposal-Agent

./: .env.example  .gitignore  API_README.md  README.md  VECTORDB_SETUP.md  main.py  pyproject.toml  run_api.py  vercel.json
backend/: .env.example  .gitignore  README.md  cli_main.py  index.py  main.py  pyproject.toml  requirements.txt  run_api.py
backend/src/: app.py  config.py  graph.py  nlp_parser.py  pdf_builder.py  state.py
backend/src/templates/: proposal.html.j2
backend/src/tools/: drive.py
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ChatInterface.tsx  Message.tsx  ParametersDisplay.tsx
frontend/src/types/: index.ts
src/: api.py  config.py  conversation_manager.py  graph.py  memory_store.py  nlp_parser.py  pdf_builder.py  pinecone_memory.py  proposal_system_prompt.py  state.py
src/templates/: proposal.html.j2
src/tools/: drive.py  groq_client.py  research.py
