[project]
name = "proposal-agent"
version = "0.1.0"
description = "Tarkshy AI Proposal Generator Agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "groq>=0.4.1",
    "langchain>=0.1.0",
    "langgraph>=0.0.1",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0",
    "jinja2>=3.1.4",
    "weasyprint>=62.3",
    "google-api-python-client>=2.151.0",
    "google-auth-oauthlib>=1.2.1",
    "google-auth-httplib2>=0.2.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
]

[project.scripts]
app = "src.api:app"
